--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="loginModalLabel">Modal title</h1>
+        <h1 class="modal-title fs-5" id="loginModalLabel">Login</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -87,7 +87,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="signupModalLabel">Modal title</h1>
+        <h1 class="modal-title fs-5" id="signupModalLabel">Sign Up</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -169,7 +169,7 @@
           <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
               <strong class="d-inline-block mb-2 text-primary">World</strong>
-              <h3 class="mb-0">Coding Coferences</h3>
+              <h3 class="mb-0">Coding Conferences</h3>
               <div class="mb-1 text-body-secondary">Nov 12</div>
               <p class="card-text mb-auto">Stay ahead of the game, with insights from global coding conferences..</p>
               <a href="#" class="stretched-link">Continue reading</a>
@@ -199,7 +199,7 @@
           <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
               <strong class="d-inline-block mb-2 text-primary">World</strong>
-              <h3 class="mb-0">Coding Coferences</h3>
+              <h3 class="mb-0">Coding Conferences</h3>
               <div class="mb-1 text-body-secondary">Nov 12</div>
               <p class="card-text mb-auto">Stay ahead of the game, with insights from global coding conferences..</p>
               <a href="#" class="stretched-link">Continue reading</a>
